--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>My insitute thakurgaon polytechnic isntitute </h1>
     <h2>my dipetment cmt</h2>
+    <h3> my name is asik reza </h3>
 </body>
 </html>
