--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My insitute thakurgaon polytechnic isntitute </h1>
-    <h2>my dipetment cmt</h2>
-    <h3> my name is asik reza </h3>
+    <header class="Asik">
+        <h1> welcome my website</h1>
+    </header>
 </body>
 </html>
