--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <header class="Asik">
         <h1> welcome my website</h1>
     </header>
+    <img src="img/leaves-57427_1280.jpg" alt="">
 </body>
 </html>
